# patent-client-agents

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ATLAS_INTEGRATION.md  CATALOG.md  CHANGELOG.md  CLAUDE.md  CONNECTOR_STANDARDS.md  FEES_TOP30_GAP.md  MIGRATION_PLAYBOOK.md  README.md  REFACTOR_PLAN.md  SESSION-2026-05-18.md  TODO.md  marketplace.json  mkdocs.yml  pyproject.toml
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docs.yml
archive/: DEVELOPMENT_PLAN.md  README.md
archive/patentsview/: __init__.py  api.py  client.py  query.py
archive/patentsview_tests/: __init__.py  test_client.py  test_query.py
coverage/: README.md  atlas.json  coverage.json  sources.yaml
deploy/: patent-client-agents-mcp.service
docs/: index.md  installation.md  mcp-stdio.md
docs/api/: canlii.md  cpc.md  epo-ops.md  google-patents.md  jpo.md  mpep.md  tmep.md  uspto-applications.md  uspto-assignments.md  uspto-bulkdata.md  uspto-odp.md  uspto-office-actions.md  uspto-petitions.md  uspto-publications.md  uspto-trademark-assignments.md  uspto-tsdr.md
docs/stylesheets/: extra.css
docs_hooks/: sync_patent_client_index.py
research/: BACKLOG.md  COVERAGE_STRATEGY.md  RUNBOOK-connector-build.md  STATE.yaml  ip-research-courts.md  ip-research-europe.md  ip-research-multilateral.md  ip-research-wipo-directory.md  tool-surface-audit-2026-05-14.md
research/multilateral/: wipo-lex.md  wipo-madrid.md
research/national/: README.md  ar-inpi.md  at-opa.md  br-inpi.md  ch-ipi.md  de-dpma.md  es-oepm.md  fi-prh.md  fr-inpi.md  il-ilpo.md  it-uibm.md  jp-jpo.md  nl-rvo.md  nz-iponz.md  ru-rospatent.md  se-prv.md  sg-ipos.md  tw-tipo.md  us-usco.md  us-uspto.md
research/regional/: README.md  epo.md  euipo.md  upc.md
research/specs/: README.md  fr-inpi-connector-spec.md  kr-kipo-connector-spec.md  tw-tipo-connector-spec.md
resources/epo/: en-ops.txt
resources/jpo/: jpo_api_handbook_v14_e.md  jpo_api_openapi.json  jpo_api_reference_e.js
resources/uspto/: uspto_odp_swagger.yaml
scripts/: build_coverage.py  lint_catalog.py  probe_wipo_publish.py
skills/ip_research/: SKILL.md  install.sh  skill.md
skills/uspto_forms/: SKILL.md  refresh_forms.py  validate_ads.py
src/ip_tools/: __init__.py
src/law_tools_core/: __init__.py  base_client.py  cache.py  corpus_db.py  envelope.py  exceptions.py  logging.py  oauth2.py  resilience.py  tooling.py
src/patent_client_agents/: __init__.py  skill_install.py  unified.py
tests/: conftest.py  test_cache.py  test_core.py  test_uspto_forms.py
tests/cafc/: test_mcp_envelope.py
tests/canlii/: test_mcp_envelope.py
tests/cassettes/: tests_uspto_assignments_test_client_py_TestClient_test_search_by_application.yaml  tests_uspto_assignments_test_client_py_TestClient_test_search_by_assignee.yaml  tests_uspto_assignments_test_client_py_TestClient_test_search_by_assignor.yaml  tests_uspto_assignments_test_client_py_TestClient_test_search_by_patent.yaml  tests_uspto_assignments_test_client_py_TestClient_test_search_by_reel_frame.yaml  tests_uspto_assignments_test_client_py_TestClient_test_search_multi_criteria.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_by_application.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_by_assignee_contains.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_by_patent.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_by_reel_frame.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_offset_skips_records.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_truncated_flag_for_huge_query.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_with_conveyance_filter.yaml  tests_uspto_assignments_test_client_py_TestSearchLive_test_search_with_executed_between.yaml  tests_uspto_odp_test_ptab_py_TestPtabAppealsClient_test_download.yaml  tests_uspto_odp_test_ptab_py_TestPtabAppealsClient_test_get_decisions_by_number.yaml  tests_uspto_odp_test_ptab_py_TestPtabAppealsClient_test_search.yaml  tests_uspto_odp_test_ptab_py_TestPtabAppealsClient_test_search_with_facets.yaml  tests_uspto_odp_test_ptab_py_TestPtabInterferencesClient_test_download.yaml  tests_uspto_odp_test_ptab_py_TestPtabInterferencesClient_test_get_decisions_by_number.yaml  tests_uspto_odp_test_ptab_py_TestPtabInterferencesClient_test_search.yaml  tests_uspto_odp_test_ptab_py_TestPtabInterferencesClient_test_search_with_fields.yaml  tests_uspto_odp_test_ptab_py_TestPtabModels_test_appeal_model_fields.yaml  tests_uspto_odp_test_ptab_py_TestPtabModels_test_interference_model_fields.yaml  tests_uspto_odp_test_ptab_py_TestPtabModels_test_trial_proceeding_model_fields.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_download_proceedings.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_get_decisions_by_trial.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_get_documents_by_trial.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_get_proceeding.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_search_decisions.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_search_documents.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_search_proceedings.yaml  tests_uspto_odp_test_ptab_py_TestPtabTrialsClient_test_search_proceedings_with_facets.yaml  tests_uspto_trademark_assignments_test_client_py_TestTrademarkAssignmentClientLive_test_search_by_assignee.yaml  tests_uspto_trademark_assignments_test_client_py_TestTrademarkAssignmentClientLive_test_search_by_assignor.yaml  tests_uspto_trademark_assignments_test_client_py_TestTrademarkAssignmentClientLive_test_search_by_registration.yaml  tests_uspto_trademark_assignments_test_client_py_TestTrademarkAssignmentClientLive_test_search_by_serial.yaml  tests_uspto_trademark_assignments_test_client_py_TestTrademarkAssignmentClientLive_test_search_combined.yaml  tests_uspto_tsdr_test_client_py_TestTsdrClientLive_test_get_documents.yaml  (+2 more)
tests/cpc/: test_api.py  (+1 more)
(+569 files in other folders)
