[project]
name = "patent-client-agents"
version = "0.6.0"
description = "Intellectual property research toolkit for AI agents — patents, trademarks, and prosecution data from USPTO, EPO, JPO, Google Patents, MPEP, and CPC"
readme = "README.md"
authors = [
    { name = "Parker Hancock", email = "633163+parkerhancock@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["patent", "intellectual property", "trademark", "ai", "agents", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anyio>=4.4",
    "httpx>=0.27",
    "h2>=4.1",
    "lxml>=5.2",
    "cssselect>=1.2",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "tenacity>=8.4",
    "hishel[async]>=1.1.3",
    "markitdown[pdf]>=0.1.3",
    "pypdf>=4.2",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.2.3",
    "starlette>=0.37",
    # fastmcp imports `from griffe import ...` — the 2.x release split the
    # top-level module out into a separate `griffelib` distribution, so
    # fastmcp's import fails on griffe>=2. Pin here until upstream fastmcp
    # either migrates to griffelib or re-adds the compat shim.
    "griffe<2",
]

[project.scripts]
patent-client-agents-mcp = "patent_client_agents.mcp.server:main"
patent-client-agents-skill-install = "patent_client_agents.skill_install:main"

[project.urls]
Homepage = "https://github.com/parkerhancock/patent-client-agents"
Repository = "https://github.com/parkerhancock/patent-client-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patent_client_agents", "src/law_tools_core"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "vcrpy>=6.0",
    "ruff>=0.9.0",
    "ty>=0.0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["patent_client_agents", "law_tools_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
