[project]
name = "patent-client-agents"
version = "0.15.0"
description = "Intellectual property research toolkit for AI agents — patents, trademarks, and prosecution data from USPTO, EPO, JPO, EUIPO, Google Patents, CanLII, WIPO Lex, MPEP, and CPC"
readme = "README.md"
authors = [
    { name = "Parker Hancock", email = "633163+parkerhancock@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["patent", "intellectual property", "trademark", "ai", "agents", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "anyio>=4.4",
    "httpx>=0.27",
    "h2>=4.1",
    "lxml>=5.2",
    "cssselect>=1.2",
    "pydantic>=2.7",
    "python-dateutil>=2.9",
    "tenacity>=8.4",
    "hishel[async]>=1.1.3",
    "markitdown[pdf]>=0.1.3",
    "pypdf>=4.2",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.2.3",
    "starlette>=0.37",
    # fastmcp imports `from griffe import ...` — the 2.x release split the
    # top-level module out into a separate `griffelib` distribution, so
    # fastmcp's import fails on griffe>=2. Pin here until upstream fastmcp
    # either migrates to griffelib or re-adds the compat shim.
    "griffe<2",
]
tmsearch = [
    # USPTO Trademark Search sits behind AWS WAF. curl_cffi gives us the
    # Chrome TLS fingerprint the WAF expects on API calls. Playwright is
    # used to mint a fresh ``aws-waf-token`` cookie when the cache is
    # empty/stale; once acquired, the token lasts ~4 days. Headless server
    # deployments typically run a separate Playwright job to mint tokens
    # and feed them in via PCA_WAF_TOKEN_JSON, so curl_cffi alone is
    # enough at request time.
    "curl_cffi>=0.7",
    "playwright>=1.40",
]

[project.scripts]
patent-client-agents-mcp = "patent_client_agents.mcp.server:main"
patent-client-agents-skill-install = "patent_client_agents.skill_install:main"
patent-client-agents-build-mpep-corpus = "patent_client_agents.mpep.corpus.build:main"
patent-client-agents-build-tmep-corpus = "patent_client_agents.tmep.corpus.build:main"
patent-client-agents-build-upc-statutes-corpus = "patent_client_agents.upc_statutes.corpus.build:main"
patent-client-agents-build-mopp-corpus = "patent_client_agents.ukipo_mopp.corpus.build:main"
patent-client-agents-build-guidelines-corpus = "patent_client_agents.epo_guidelines.corpus.build:main"

[project.urls]
Homepage = "https://github.com/parkerhancock/patent-client-agents"
Repository = "https://github.com/parkerhancock/patent-client-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patent_client_agents", "src/law_tools_core"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "vcrpy>=6.0",
    "ruff>=0.9.0",
    "ty>=0.0.9",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["patent_client_agents", "law_tools_core"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live_tsdr: marks tests that hit live USPTO TSDR API (requires USPTO_TSDR_API_KEY)",
  "live_mpep: tagged for grep parity with prior suites; the corpus-backed MpepClient no longer hits live USPTO, so these tests run offline",
  "live_tmep: tagged for grep parity with prior suites; the corpus-backed TmepClient no longer hits live USPTO, so these tests run offline",
]

[tool.uv]
exclude-newer = "7 days"
